23 Feb 2006: 0.2.2 Miek <miek@miek.nl>
   -- major feature release --
   * output changes:
     - directory size is always set to zero
   * Added -F FORMAT option that allows you 
     to specify the exact output of rdup 
     (Patch from Aaron Bader)
   * Added -r: show only removed files
   * Added -m: only show new/modified files
     (Both from Aaron Bader)
   * -0 semantics changed: now only applies to 
     the internal filelist. If you want a NULL use
     '\0' in the -F FORMAT string
   * Documentation was updated to reflect the current code
   * strerror() is now also printed more often
   * add ferror() check to cat() in gfunc.c
   * renamed excl.sh to rdgrep.sh (rdup-grep)
   * various small bits: typo's, check for signals more often.


16 Feb 2006: 0.2.1 Miek <miek@miek.nl>
   * the output format was changed: 
     the path_size was added to it
   * a -c option was added, which concatenate the file's
     output to standard output. This is done to make 
     remote backups more easy. This also changes rdup's output!
   * a -s <size> option was added which will only print
     out files that are smaller then a certain size.
   * A beginning was made with a perl impl. of hdup2, which 
     runs on top of rdup.
   * rmirror and mirror are combined into mirror.sh
   * all shared stuff was refactored
   Code:
   * Various typo's are fixed
   * -Wextra was dropped to allow compilation with older gcc's.
   * functions that weren't exported are now declared static.
   * Moved TODO to todo


25 Jan 2006: 0.2.0 Miek <miek@miek.nl>
   * Jumped to version 0.2.0.
   Build:
   * Reworked autoconf, autoREconf && ./configure && make
     must now be used to compile rdup
   Code:
   * Ported to FreeBSD, getdelim.c was added for that.
     Also test compiled it on Mac OS X with Fink.
   * Signal handling for SIGPIPE and SIGINT was implemented,
     we now print an error when receiving such a signal.


18 Jan 2006: 0.1.3 Miek <miek@miek.nl>