@@ -1,0 +1,22 @@
+'\" t
+.TH CRYPT.SH 1 "27 Feb 2006" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+        
+.SH NAME
+crypt.sh, encrypt \- encrypt files received from \fBrdup -c\fR
+
+.SH SYNOPSIS
+.B crypt.sh
+.IR KEYFILE
+
+.SH DESCRIPTION
+\fBcrypt.sh\fR encrypts the data it receives from \fBrdup\fR with the
+key contained in \fIKEYFILE\fR.
+.PP
+For example,
+.PP
+        rdup -c list ~/Documents | crypt.sh KEY | mirror.sh -c -b /tmp/storage
+.PP
+Note the \fI-c\fR option for \fBmirror.sh\fR.
+
+.SH SEE ALSO
+gzip.sh(1) and mirror.sh(8).
