@@ -1,5 +1,5 @@
 '\" t
-.TH HIST 1 "25 Dec 2005" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
+.TH HIST.SH 1 "25 Dec 2005" "@PACKAGE_VERSION@" "@PACKAGE_NAME@ utils"
         
 .SH NAME
 hist.sh, history \- print file names from the dump
